Add true domain

--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name api.riga.services;
+    server_name bot.riga.services;
 
     # Redirect all HTTP requests to HTTPS
     return 301 https://$host$request_uri;
@@ -8,10 +8,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api.riga.services;
+    server_name bot.riga.services;
 
-    ssl_certificate /etc/letsencrypt/live/api.riga.services/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.riga.services/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bot.riga.services/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bot.riga.services/privkey.pem;
 
     location / {
         # Proxy requests to the web service (container name should match your service name in Docker)
