--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
       context: .
       dockerfile: .dockerfile
     container_name: django_web
-    command: uvicorn ai_photo_bot.asgi:application --host 0.0.0.0 --port 8000
+    command: >
+      sh -c "python manage.py migrate && uvicorn ai_photo_bot.asgi:application --host 0.0.0.0 --port 8000"
     volumes:
       - .:/app
     ports:
@@ -12,6 +13,7 @@ services:
     env_file:
       - .env
     depends_on:
+      - db
       - redis
 
   redis:
@@ -19,6 +21,17 @@ services:
     container_name: redis_broker
     ports:
       - "6379:6379"
+
+  db:
+    image: postgres:13
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports: 
+      - "5432:5432"
 
   worker:
     build:
@@ -29,7 +42,24 @@ services:
     volumes:
       - .:/app
     depends_on:
+      - db
       - redis
       - web
     env_file:
       - .env
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf  # Mount your NGINX configuration file
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    ports:
+      - "8081:80"
+      - "443:443"
+    depends_on:
+      - web  # Ensure web service is up before NGINX starts
+
+volumes: 
+  postgres_data: 
