--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
       dockerfile: .dockerfile
     container_name: django_web
     command: >
-      sh -c "python manage.py migrate && uvicorn ai_photo_bot.asgi:application --host 0.0.0.0 --port 8000"
+      sh -c "python manage.py migrate &&
+             gunicorn ai_photo_bot.asgi:application -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000 --workers 1"
     volumes:
       - .:/app
     ports:
@@ -19,11 +20,12 @@ services:
   redis:
     image: "redis:6.2-alpine"
     container_name: redis_broker
+    command: redis-server --maxmemory 100mb --maxmemory-policy allkeys-lru --save ""
     ports:
       - "6379:6379"
 
   db:
-    image: postgres:13
+    image: postgres:13-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
@@ -49,17 +51,17 @@ services:
       - .env
 
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     container_name: nginx-proxy
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf  # Mount your NGINX configuration file
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
     ports:
-      - "8081:80"
+      - "80:80"
       - "443:443"
     depends_on:
-      - web  # Ensure web service is up before NGINX starts
+      - web
 
 volumes: 
-  postgres_data: 
+  postgres_data:
